Fix for overflowing header cells

--- a/app/assets/stylesheets/lentil/breakpoint/sass/_components.scss
+++ b/app/assets/stylesheets/lentil/breakpoint/sass/_components.scss
@@ -114,6 +114,7 @@ div.images {
 
     > *:first-child {
         position: absolute;
+        box-sizing: border-box;
         top: 0;
         left: 0;
         width: 100%;
